--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="celebration" class="celebration hidden">
         <div class="celebration-content">
             <h2>Ура! 🎉</h2>
-            <p>Я так рад(а), что ты согласилась!</p>
+            <p>Я так рад, что ты согласилась!</p>
             <p>Жду нашей встречи с нетерпением!</p>
             <button id="close-celebration" class="btn yes-btn">Закрыть</button>
         </div>
