--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Приглашение на свидание</h1>
         <div class="invitation-text">
             <p>Привет, <span id="name-placeholder">Почти Жена</span>!</p>
-            <p>Я хочу пригласить тебя на прекрасный ужин в ресторан, а после в кинотеатр <span id="restaurant-placeholder">Якитория</span>.</p>
+            <p>Я хочу пригласить тебя на прекрасный ужин в ресторан <span id="restaurant-placeholder">Якитория,</span> а после в кинотеатр.</p>
             <p>Будет вкусная еда, приятная атмосфера и, конечно же, твоя прекрасная улыбка!</p>
             <p>Как насчет <span id="date-placeholder">05.08.2025</span> в <span id="time-placeholder">18:30</span>?</p>
         </div>
